name:                NSFW
category:            Network
version:             0.1.0.0
license:             BSD2
license-file:        LICENSE
cabal-version:       >=1.10
author:              Matt Renaud
maintainer:          mrenaud92@gmail.com
synopsis:            A simple firewall.
copyright:           Copyright (C) 2015 Matt Renaud
build-type:          Simple
extra-source-files:  README.md
homepage:            https://github.com/m-renaud/NSFW
bug-reports:         https://github.com/m-renaud/NSFW/issues

source-repository head
  type: git
  location: git://github.com/m-renaud/NSFW.git

library
  exposed-modules: Firewall,
                   Network.NSFW.Firewall.Rule,
                   Network.NSFW.Firewall.Common,
                   Network.NSFW.Firewall.Config,
                   Network.NSFW.Firewall.Logging,
                   Network.NSFW.Firewall.Packet

  -- other-modules:

  default-extensions: FlexibleContexts

  build-depends:       base >=4.8 && <4.9, mtl >=2.2 && <2.3, ConfigFile >=1.1 && <1.2, data-default >=0.5 && <0.6

  hs-source-dirs:      src

  default-language:    Haskell2010

  ghc-options:         -Wall